--- a/BasicProject/Config/DefaultGame.ini
+++ b/BasicProject/Config/DefaultGame.ini
@@ -8,3 +8,7 @@ ProjectID=8C0D9D14414B3D54E344EE8C6EE35B86
 [/Script/CharacterSystem.CharacterSystemSettings]
 CharacterSystemConfig=/CharacterSystem/DA_CharacterConfig.DA_CharacterConfig
 
+[/Script/InteractionSystem.InteractionSettings]
+DefaultWidgetClass=/InteractionSystem/UI/WBP_InteractionWidget.WBP_InteractionWidget_C
+DefaultDetectionRadius=150.000000
+
