--- a/BasicProject/Config/DefaultGame.ini
+++ b/BasicProject/Config/DefaultGame.ini
@@ -11,4 +11,5 @@ CharacterSystemConfig=/CharacterSystem/DA_CharacterConfig.DA_CharacterConfig
 [/Script/InteractionSystem.InteractionSettings]
 DefaultWidgetClass=/InteractionSystem/UI/WBP_InteractionWidget.WBP_InteractionWidget_C
 DefaultDetectionRadius=150.000000
+DefaultVisibilityRadius=1500.000000
 
