패널 엘라스틱 스케일

--- a/BasicProject/Config/DefaultGame.ini
+++ b/BasicProject/Config/DefaultGame.ini
@@ -12,4 +12,6 @@ CharacterSystemConfig=/CharacterSystem/DA_CharacterConfig.DA_CharacterConfig
 DefaultWidgetClass=/InteractionSystem/UI/WBP_InteractionWidget.WBP_InteractionWidget_C
 DefaultDetectionRadius=150.000000
 DefaultVisibilityRadius=1500.000000
+DefaultAnimationElasticity=10.000000
+DefaultFadeDuration=0.150000
 
